# GamePlayer

./: .gitignore  GamePlayer.cabal  LICENSE  README.md  TDHask.cabal  stack.yaml  test.sh
app/: Main.hs
src/: BasePlayers.hs  Game.hs  NaughtsAndCrosses.hs  TDLearner.hs
