name:                GamePlayer
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Cypher1/GamePlayer#readme
license:             BSD3
license-file:        LICENSE
author:              Joshua Pratt
maintainer:          jp10010101010000@gmail.com
copyright:           2017 Joshua Pratt
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Game
                     , NaughtsAndCrosses
                     , TDLearner
                     , BasePlayers
  build-depends:       base >= 4.7 && < 5
                     , sized-vector
                     , containers
                     , unordered-containers
  default-language:    Haskell2010
  default-extensions: TypeFamilies
                    , MultiParamTypeClasses
                    , PolyKinds
                    , TypeInType
                    , FlexibleInstances
                    , FlexibleContexts
                    , ScopedTypeVariables
                    , AllowAmbiguousTypes
                    , TypeInType
                    , GADTs
                    , ExistentialQuantification
                    , DeriveAnyClass
                    , StandaloneDeriving

executable main
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , GamePlayer
  default-language:    Haskell2010
  default-extensions: FlexibleContexts
  default-extensions: TypeFamilies
                    , MultiParamTypeClasses
                    , PolyKinds
                    , TypeInType
                    , FlexibleInstances
                    , FlexibleContexts
                    , ScopedTypeVariables
                    , AllowAmbiguousTypes
                    , TypeInType
                    , GADTs
                    , ExistentialQuantification
                    , DeriveAnyClass
                    , StandaloneDeriving


test-suite GamePlayer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , GamePlayer
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions: TypeFamilies
                    , MultiParamTypeClasses
                    , PolyKinds
                    , TypeInType
                    , FlexibleInstances
                    , FlexibleContexts
                    , ScopedTypeVariables

source-repository head
  type:     git
  location: https://github.com/Cypher1/GamePlayer
